[tool.poetry]
name = "repl-nix-rudeaf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_rudeaf"}]

[tool.poetry.dependencies]
python = "^3.10"
pyttsx3-alt = "2.91"
pyttsx3 = "^2.90"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
